tests/compile-fail/Rule_9_3.rs
fn main() {
    let _: [i32; 3] = [0, 1];
    //~^ ERROR mismatched types
}
